--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>🍔 Da Família Lanches</title>
+  <base href="https://www.dafamilialanches.com.br/">
   <link rel="stylesheet" href="style.css" />
 
   <!-- Firebase v8 (na ordem correta) -->
@@ -71,8 +72,7 @@
     <div class="mini-list"></div>
     <div class="mini-foot"></div>
   </aside>
-
-  <!-- ================= COMBOS ================= -->
+<!-- ================= COMBOS ================= -->
   <section class="menu-section">
     <h2>🧡 Combos</h2>
     <div class="grid">
@@ -105,70 +105,90 @@
       </div>
     </div>
   </section>
-<!-- ================= LANCHES TRADICIONAIS ================= -->
+
+  <!-- ================= LANCHES TRADICIONAIS ================= -->
   <section class="menu-section">
     <h2>🍔 Nossos Lanches Tradicionais</h2>
     <div class="grid">
       <div class="card" data-name="Bão" data-price="11.00">
+        <img src="imagens/bão.png" alt="Bão" class="thumb">
         <h3>Bão <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 11,00</p>
-        <p>Pão, hambúrguer, alface, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
-        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+        <p>Pão, hambúrguer, alface, tomate, presunto e mussarela.</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
       </div>
 
       <div class="card" data-name="Uai" data-price="13.00">
+        <img src="imagens/uai.png" alt="Uai" class="thumb">
         <h3>Uai <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 13,00</p>
-        <p>Pão, hambúrguer, milho, bacon, alface, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
-        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+        <p>Pão, hambúrguer, milho, bacon, alface, tomate, presunto e mussarela.</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
       </div>
 
       <div class="card" data-name="Trem" data-price="14.00">
+        <img src="imagens/trem.png" alt="Trem" class="thumb">
         <h3>Trem <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 14,00</p>
-        <p>Pão, hambúrguer, salsicha, bacon, milho, alface, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
-        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+        <p>Pão, hambúrguer, salsicha, bacon, milho, alface, tomate, presunto e mussarela.</p>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
       </div>
 
-      <div class="card" data-name="Cadim" data-price="17.00">
+      <!-- (continua a partir daqui com os outros lanches tradicionais, artesanais e hot dogs na Parte 3) -->
+<div class="card" data-name="Cadim" data-price="17.00">
+        <img src="imagens/cadim.png" alt="Cadim" class="thumb">
         <h3>Cadim <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 17,00</p>
-        <p>Pão, hambúrguer, filé de frango, bacon, milho, batata palha e mussarela. Acompanha ketchup sachê.</p>
+        <p>Pão, hambúrguer, filé de frango, bacon, milho, batata palha e mussarela.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Armaria" data-price="18.00">
+        <img src="imagens/armaria.png" alt="Armaria" class="thumb">
         <h3>Armaria <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 18,00</p>
-        <p>Pão, 1 hambúrguer e 1 filé de frango, bacon, milho, batata palha e mussarela. Acompanha ketchup sachê.</p>
+        <p>Pão, 1 hambúrguer e 1 filé de frango, bacon, milho, batata palha e mussarela.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Bitela" data-price="22.00">
+        <img src="imagens/bitela.png" alt="Bitela" class="thumb">
         <h3>Bitela <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 22,00</p>
-        <p>Pão, 2 hambúrgueres, filé de frango, bacon, milho, batata palha, 2 salsichas, presunto e mussarela. Acompanha ketchup sachê.</p>
+        <p>Pão, 2 hambúrgueres, filé de frango, bacon, milho, batata palha, 2 salsichas, presunto e mussarela.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Apruma" data-price="25.00">
+        <img src="imagens/apruma.png" alt="Apruma" class="thumb">
         <h3>Apruma <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 25,00</p>
-        <p>Pão, 2 hambúrgueres artesanais, 2 filés de frango, bacon, milho, batata palha e cheddar. Acompanha ketchup sachê.</p>
+        <p>Pão, 2 hambúrgueres artesanais, 2 filés de frango, bacon, milho, batata palha e cheddar.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Gradicido" data-price="28.00">
+        <img src="imagens/gradicido.png" alt="Gradicido" class="thumb">
         <h3>Gradicido <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 28,00</p>
-        <p>Pão, 3 hambúrgueres, filé de frango, bacon, ovo, 1 salsicha, milho, batata palha, alface, tomate, 2 presuntos e 2 mussarelas. Acompanha ketchup sachê.</p>
+        <p>Pão, 3 hambúrgueres, filé de frango, bacon, ovo, salsicha, milho, batata palha, alface e tomate.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Varadifome" data-price="30.00">
+        <img src="imagens/varadifome.png" alt="Varadifome" class="thumb">
         <h3>Varadifome <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 30,00</p>
-        <p>Pão, 4 hambúrgueres, filé de frango, bacon, ovo, cheddar, milho, batata palha, 2 salsichas, alface, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
+        <p>Pão, 4 hambúrgueres, filé de frango, bacon, ovo, cheddar, milho, batata palha, alface e tomate.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
     </div>
@@ -179,23 +199,26 @@
     <h2>🍔 Lanches Artesanais</h2>
     <div class="grid">
       <div class="card" data-name="Peleja" data-price="26.00">
+        <img src="imagens/peleja.png" alt="Peleja" class="thumb">
         <h3>Peleja <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 26,00</p>
-        <p>Pão, 1 hambúrguer artesanal, 1 filé de frango, bacon, milho, batata palha, alface, tomate, presunto e mussarela. Acompanha ketchup sachê.</p>
+        <p>Pão, hambúrguer artesanal, filé de frango, bacon, milho, batata palha, alface e tomate.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Tudibom" data-price="28.50">
+        <img src="imagens/tudibom.png" alt="Tudibom" class="thumb">
         <h3>Tudibom <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 28,50</p>
-        <p>Pão, 2 hambúrgueres artesanais, 2 filés de frango, bacon, milho, batata palha, alface, tomate, 2 presuntos e 2 mussarelas. Acompanha ketchup sachê.</p>
+        <p>Pão, 2 hambúrgueres artesanais, 2 filés de frango, bacon, milho, batata palha, alface e tomate.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Custoso" data-price="31.00">
+        <img src="imagens/custoso.png" alt="Custoso" class="thumb">
         <h3>Custoso <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 31,00</p>
-        <p>Pão, 2 hambúrgueres artesanais, 2 filés de frango, bacon, milho, batata palha, alface, tomate, 2 presuntos e 2 cheddar. Acompanha ketchup sachê.</p>
+        <p>Pão, 2 hambúrgueres artesanais, 2 filés de frango, bacon, milho, batata palha, alface e cheddar.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
     </div>
@@ -206,100 +229,67 @@
     <h2>🌭 Hot Dogs</h2>
     <div class="grid">
       <div class="card" data-name="Nigucim" data-price="10.00">
+        <img src="imagens/nigucim.png" alt="Nigucim" class="thumb">
         <h3>Nigucim <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 10,00</p>
-        <p>Pão, molho, salsicha (Sadia/Perdigão), milho, batata palha, ketchup e maionese. Acompanha ketchup sachê.</p>
+        <p>Pão, molho, salsicha, milho, batata palha, ketchup e maionese.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Simprão" data-price="12.00">
+        <img src="imagens/simprão.png" alt="Simprão" class="thumb">
         <h3>Simprão <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 12,00</p>
-        <p>Pão, molho, salsicha (Sadia/Perdigão), milho, batata palha, bacon, ketchup e maionese. Acompanha ketchup sachê.</p>
-        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
-      </div>
-
-      <div class="card" data-name="Nimin" data-price="13.00">
-        <h3>Nimin <span class="badge">Com Molho Verde</span></h3>
-        <p class="price">R$ 13,00</p>
-        <p>Pão, molho, 2 salsichas (Sadia/Perdigão), milho, batata palha, bacon, ketchup, maionese e vinagrete. Acompanha ketchup sachê.</p>
-        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
-      </div>
-
-      <div class="card" data-name="Padaná" data-price="15.00">
-        <h3>Padaná <span class="badge">Com Molho Verde</span></h3>
-        <p class="price">R$ 15,00</p>
-        <p>Pão, molho, 2 salsichas (Sadia/Perdigão), milho, batata palha, bacon, vinagrete, mussarela, ketchup e maionese. Acompanha ketchup sachê.</p>
+        <p>Pão, molho, salsicha, milho, batata palha, bacon, ketchup e maionese.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Purizin" data-price="14.00">
+        <img src="imagens/purizin.png" alt="Purizin" class="thumb">
         <h3>Purizin <span class="badge">Com Molho Verde</span> <span class="badge">Com Purê</span></h3>
         <p class="price">R$ 14,00</p>
-        <p>Pão, molho, milho, purê de batata cremoso, 1 salsicha, batata palha, ketchup e maionese. Acompanha ketchup sachê.</p>
+        <p>Pão, molho, purê, milho, batata palha e maionese.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Trembão" data-price="17.00">
+        <img src="imagens/trembão.png" alt="Trembão" class="thumb">
         <h3>Trembão <span class="badge">Com Molho Verde</span> <span class="badge">Com Purê</span></h3>
         <p class="price">R$ 17,00</p>
-        <p>Pão, molho, milho, purê de batata cremoso, 2 salsichas, bacon crocante, mussarela, batata palha, vinagrete, ketchup e maionese. Acompanha ketchup sachê.</p>
+        <p>Pão, molho, purê, milho, bacon, salsichas e maionese.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
     </div>
   </section>
-<!-- ================= BEBIDAS ================= -->
+
+  <!-- ================= BEBIDAS ================= -->
   <section class="menu-section">
     <h2>🥤 Bebidas</h2>
     <div class="grid">
       <div class="card" data-name="Coca 200ml" data-price="4.00">
-        <h3>Coca 200ml</h3>
-        <p class="price">R$ 4,00</p>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
+        <h3>Coca 200ml</h3><p class="price">R$ 4,00</p><div class="actions"><button class="add-cart">Adicionar</button></div>
       </div>
       <div class="card" data-name="Fanta Laranja 1L" data-price="8.00">
-        <h3>Fanta Laranja 1 L</h3>
-        <p class="price">R$ 8,00</p>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
+        <h3>Fanta Laranja 1L</h3><p class="price">R$ 8,00</p><div class="actions"><button class="add-cart">Adicionar</button></div>
       </div>
       <div class="card" data-name="Coca 1L" data-price="9.00">
-        <h3>Coca-Cola 1 L</h3>
-        <p class="price">R$ 9,00</p>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </div>
-      <div class="card" data-name="Coca 1L Zero" data-price="9.00">
-        <h3>Coca-Cola 1 L Zero</h3>
-        <p class="price">R$ 9,00</p>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
+        <h3>Coca-Cola 1L</h3><p class="price">R$ 9,00</p><div class="actions"><button class="add-cart">Adicionar</button></div>
       </div>
       <div class="card" data-name="Kuat 2L" data-price="10.00">
-        <h3>Kuat 2 L</h3>
-        <p class="price">R$ 10,00</p>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
-      </div>
-      <div class="card" data-name="Coca 2L" data-price="13.00">
-        <h3>Coca-Cola 2 L</h3>
-        <p class="price">R$ 13,00</p>
-        <div class="actions"><button class="add-cart">Adicionar</button></div>
+        <h3>Kuat 2L</h3><p class="price">R$ 10,00</p><div class="actions"><button class="add-cart">Adicionar</button></div>
       </div>
     </div>
   </section>
 
-  <!-- ================= MODAL ADICIONAIS (Lanches) ================= -->
+  <!-- ================= MODAIS E LOGIN ================= -->
   <div id="extras-modal" class="modal">
     <div class="modal-content">
-      <div class="modal-head">
-        <h3>Adicionais</h3>
-        <button class="extras-close">✖</button>
-      </div>
+      <div class="modal-head"><h3>Adicionais</h3><button class="extras-close">✖</button></div>
       <div id="extras-list" class="extras-list"></div>
-      <div class="modal-foot">
-        <button id="extras-add" class="btn-primary">Adicionar ao Pedido</button>
-      </div>
+      <div class="modal-foot"><button id="extras-add" class="btn-primary">Adicionar ao Pedido</button></div>
     </div>
   </div>
 
-  <!-- ================= MODAL LOGIN ================= -->
   <div id="login-modal" class="modal">
     <div class="modal-content login-box">
       <button class="login-x">✖</button>
