--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
     <div class="carousel">
       <button class="c-btn c-prev">‹</button>
       <div class="slides">
-        <img class="slide" src="promocoes/promo1.jpg"  data-wa="Promoção 1 imperdível! 🍔" />
-        <img class="slide" src="promocoes/promo2.jpg"  data-wa="Promoção 2 exclusiva! 🌭" />
-        <img class="slide" src="promocoes/promo3.jpg"  data-wa="Promoção 3 só hoje! 🥤" />
-        <img class="slide" src="promocoes/promo4.jpg"  data-wa="Promoção 4 da casa! 🍟" />
-        <img class="slide" src="promocoes/promo5.jpg"  data-wa="Promoção 5 sensacional! 🔥" />
-        <img class="slide" src="promocoes/promo6.jpg"  data-wa="Promoção 6 com desconto! 💥" />
-        <img class="slide" src="promocoes/promo7.jpg"  data-wa="Promoção 7 exclusiva do site! 💛" />
-        <img class="slide" src="promocoes/promo8.jpg"  data-wa="Promoção 8 limitadíssima! 🚨" />
-        <img class="slide" src="promocoes/promo9.jpg"  data-wa="Promoção 9 — última chance! 🏁" />
+        <img class="slide" src="promocoes/promo1.jpg" data-wa="Promoção 1 imperdível! 🍔" />
+        <img class="slide" src="promocoes/promo2.jpg" data-wa="Promoção 2 exclusiva! 🌭" />
+        <img class="slide" src="promocoes/promo3.jpg" data-wa="Promoção 3 só hoje! 🥤" />
+        <img class="slide" src="promocoes/promo4.jpg" data-wa="Promoção 4 da casa! 🍟" />
+        <img class="slide" src="promocoes/promo5.jpg" data-wa="Promoção 5 sensacional! 🔥" />
+        <img class="slide" src="promocoes/promo6.jpg" data-wa="Promoção 6 com desconto! 💥" />
+        <img class="slide" src="promocoes/promo7.jpg" data-wa="Promoção 7 exclusiva do site! 💛" />
+        <img class="slide" src="promocoes/promo8.jpg" data-wa="Promoção 8 limitadíssima! 🚨" />
+        <img class="slide" src="promocoes/promo9.jpg" data-wa="Promoção 9 — última chance! 🏁" />
       </div>
       <button class="c-btn c-next">›</button>
     </div>
@@ -118,7 +118,10 @@
         <h3>Bão <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 11,00</p>
         <p>Pão, hambúrguer, alface, tomate, presunto e mussarela.</p>
-        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
       </div>
 
       <div class="card" data-name="Uai" data-price="13.00">
@@ -126,7 +129,10 @@
         <h3>Uai <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 13,00</p>
         <p>Pão, hambúrguer, milho, bacon, alface, tomate, presunto e mussarela.</p>
-        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
       </div>
 
       <div class="card" data-name="Trem" data-price="14.00">
@@ -134,7 +140,10 @@
         <h3>Trem <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 14,00</p>
         <p>Pão, hambúrguer, salsicha, bacon, milho, alface, tomate, presunto e mussarela.</p>
-        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
       </div>
 
       <div class="card" data-name="Cadim" data-price="17.00">
@@ -142,7 +151,10 @@
         <h3>Cadim <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 17,00</p>
         <p>Pão, hambúrguer, filé de frango, bacon, milho, batata palha e mussarela.</p>
-        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
       </div>
 
       <div class="card" data-name="Armaria" data-price="18.00">
@@ -150,7 +162,10 @@
         <h3>Armaria <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 18,00</p>
         <p>Pão, 1 hambúrguer e 1 filé de frango, bacon, milho, batata palha e mussarela.</p>
-        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
       </div>
 
       <div class="card" data-name="Bitela" data-price="22.00">
@@ -158,7 +173,10 @@
         <h3>Bitela <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 22,00</p>
         <p>Pão, 2 hambúrgueres, filé de frango, bacon, milho, batata palha, 2 salsichas, presunto e mussarela.</p>
-        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
       </div>
 
       <div class="card" data-name="Apruma" data-price="25.00">
@@ -166,7 +184,10 @@
         <h3>Apruma <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 25,00</p>
         <p>Pão, 2 hambúrgueres artesanais, 2 filés de frango, bacon, milho, batata palha e cheddar.</p>
-        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
       </div>
 
       <div class="card" data-name="Gradicido" data-price="28.00">
@@ -174,7 +195,10 @@
         <h3>Gradicido <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 28,00</p>
         <p>Pão, 3 hambúrgueres, filé de frango, bacon, ovo, 1 salsicha, milho, batata palha, alface, tomate, 2 presuntos e 2 mussarelas.</p>
-        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
       </div>
 
       <div class="card" data-name="Varadifome" data-price="30.00">
@@ -182,7 +206,10 @@
         <h3>Varadifome <span class="badge">Com Molho Verde</span></h3>
         <p class="price">R$ 30,00</p>
         <p>Pão, 4 hambúrgueres, filé de frango, bacon, ovo, cheddar, milho, batata palha, 2 salsichas, alface, tomate, presunto e mussarela.</p>
-        <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
+        <div class="actions">
+          <button class="add-cart">Adicionar</button>
+          <button class="extras-btn">Adicionais</button>
+        </div>
       </div>
     </div>
   </section>
@@ -223,7 +250,7 @@
     <div class="grid">
       <div class="card" data-name="Nigucim" data-price="10.00">
         <img src="imagens/nigucim.png" alt="Nigucim">
-        <h3>Nigucim <span class="badge">Com Molho Verde</span></h3>
+        <h3>Nigucim</h3>
         <p class="price">R$ 10,00</p>
         <p>Pão, molho, salsicha (Sadia/Perdigão), milho, batata palha, ketchup e maionese.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
@@ -231,23 +258,23 @@
 
       <div class="card" data-name="Simprão" data-price="12.00">
         <img src="imagens/simprao.png" alt="Simprão">
-        <h3>Simprão <span class="badge">Com Molho Verde</span></h3>
+        <h3>Simprão</h3>
         <p class="price">R$ 12,00</p>
-        <p>Pão, molho, salsicha (Sadia/Perdigão), milho, batata palha, bacon, ketchup e maionese.</p>
+        <p>Pão, molho, salsicha, milho, batata palha, bacon, ketchup e maionese.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Nimin" data-price="13.00">
         <img src="imagens/nimin.png" alt="Nimin">
-        <h3>Nimin <span class="badge">Com Molho Verde</span></h3>
+        <h3>Nimin</h3>
         <p class="price">R$ 13,00</p>
-        <p>Pão, molho, 2 salsichas (Sadia/Perdigão), milho, batata palha, bacon, ketchup, maionese e vinagrete.</p>
+        <p>Pão, molho, 2 salsichas, milho, batata palha, bacon, ketchup, maionese e vinagrete.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
 
       <div class="card" data-name="Padaná" data-price="15.00">
         <img src="imagens/padana.png" alt="Padaná">
-        <h3>Padaná <span class="badge">Com Molho Verde</span></h3>
+        <h3>Padaná</h3>
         <p class="price">R$ 15,00</p>
         <p>Pão, molho, 2 salsichas, milho, batata palha, bacon, vinagrete, mussarela, ketchup e maionese.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
@@ -255,7 +282,7 @@
 
       <div class="card" data-name="Purizin" data-price="14.00">
         <img src="imagens/purizin.png" alt="Purizin">
-        <h3>Purizin <span class="badge">Com Molho Verde</span> <span class="badge">Com Purê</span></h3>
+        <h3>Purizin <span class="badge">Com Purê</span></h3>
         <p class="price">R$ 14,00</p>
         <p>Pão, molho, milho, purê de batata cremoso, 1 salsicha, batata palha, ketchup e maionese.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
@@ -263,14 +290,15 @@
 
       <div class="card" data-name="Trembão" data-price="17.00">
         <img src="imagens/trembao.png" alt="Trembão">
-        <h3>Trembão <span class="badge">Com Molho Verde</span> <span class="badge">Com Purê</span></h3>
+        <h3>Trembão <span class="badge">Com Purê</span></h3>
         <p class="price">R$ 17,00</p>
         <p>Pão, molho, milho, purê de batata cremoso, 2 salsichas, bacon crocante, mussarela, batata palha, vinagrete, ketchup e maionese.</p>
         <div class="actions"><button class="add-cart">Adicionar</button><button class="extras-btn">Adicionais</button></div>
       </div>
     </div>
   </section>
-<!-- ================= BEBIDAS ================= -->
+
+  <!-- ================= BEBIDAS ================= -->
   <section class="menu-section">
     <h2>🥤 Bebidas</h2>
     <div class="grid">
@@ -294,11 +322,13 @@
       </div>
     </div>
   </section>
-
-  <!-- ================= MODAL DE ADICIONAIS ================= -->
+ <!-- ================= MODAL DE ADICIONAIS ================= -->
   <div id="extras-modal" class="modal">
     <div class="modal-content">
-      <h3>Adicionais</h3>
+      <div class="modal-head">
+        <h3>Adicionais</h3>
+        <button class="extras-close">✖</button>
+      </div>
       <div class="extras-list">
         <label><input type="checkbox" value="0.99"> Cebola — R$ 0,99</label>
         <label><input type="checkbox" value="1.99"> Salada — R$ 1,99</label>
@@ -319,9 +349,12 @@
   <!-- ================= MODAL DE REFRIGERANTE ================= -->
   <div id="combo-modal" class="modal">
     <div class="modal-content">
-      <h3>Escolher Refrigerante</h3>
+      <div class="modal-head">
+        <h3>Escolher Refrigerante</h3>
+        <button class="combo-close">✖</button>
+      </div>
       <div id="combo-body">
-        <label><input type="radio" name="drink" value="Fanta 1L"> Fanta 1L (padrão) — + R$ 0,00</label>
+        <label><input type="radio" name="drink" value="Fanta 1L" checked> Fanta 1L (padrão) — + R$ 0,00</label>
         <label><input type="radio" name="drink" value="Coca 1L"> Coca 1L — + R$ 3,00</label>
         <label><input type="radio" name="drink" value="Coca 1L Zero"> Coca 1L Zero — + R$ 3,00</label>
       </div>
@@ -335,21 +368,45 @@
   <!-- ================= MODAL DE LOGIN ================= -->
   <div id="login-modal" class="modal">
     <div class="modal-content login-box">
-      <h3>Entrar / Cadastrar</h3>
+      <div class="modal-head">
+        <h3>Entrar / Cadastrar</h3>
+        <button class="login-close">✖</button>
+      </div>
       <form id="login-form" class="login-form">
-        <input type="email" placeholder="E-mail" required>
-        <input type="password" placeholder="Senha" required>
+        <input id="login-email" type="email" placeholder="E-mail" required>
+        <input id="login-senha" type="password" placeholder="Senha" required>
         <button type="submit" class="btn-primario">Entrar</button>
       </form>
       <div class="divider">ou</div>
-      <button id="google-login" class="btn-google">Entrar com Google</button>
+      <button id="google-login" class="btn-google">
+        <img src="imagens/google-icon.png" alt="Google" class="google-icon"> Entrar com Google
+      </button>
     </div>
   </div>
 
+  <!-- ================= COBERTURA DE ENTREGA ================= -->
+  <section class="coverage">
+    <h2>🗺️ Atendemos em toda Patos de Minas!</h2>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3785.564292595651!2d-46.51823842398731!3d-18.579795787368847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa556c9343f2f65%3A0xa86de502e5acb58b!2sPatos%20de%20Minas%20-%20MG!5e0!3m2!1spt-BR!2sbr!4v1729530000000!5m2!1spt-BR!2sbr"
+      width="100%" height="320"
+      style="border:0; border-radius:15px; filter: hue-rotate(30deg) brightness(1.1);"
+      allowfullscreen="" loading="lazy">
+    </iframe>
+  </section>
+
   <!-- ================= RODAPÉ ================= -->
   <footer class="footer">
-    <p>📍 Rua do Sabor, nº 123 – Uberlândia/MG</p>
-    <p>📞 Peça pelo WhatsApp: <b>(34) 99717-8336</b></p>
+    <p>📍 <a href="https://www.google.com/maps?q=Rua+dos+Caiçaras,+212,+Patos+de+Minas,+MG" target="_blank">
+      Rua dos Caiçaras, 212 — Patos de Minas/MG
+    </a></p>
+
+    <div class="footer-links">
+      <a href="https://wa.me/5534997178336" target="_blank" class="footer-btn">💬 WhatsApp</a>
+      <a href="https://www.instagram.com/dafamilialanches" target="_blank" class="footer-btn">📸 Instagram</a>
+      <a href="https://www.ifood.com.br/delivery/patos-de-minas/dafamilialanches" target="_blank" class="footer-btn">🍔 iFood</a>
+    </div>
+
     <div class="footer-copy">
       © 2025 Da Família Lanches — Todos os direitos reservados 🍔
     </div>
